force-app/main/default/objects/COGS_Set__c/COGS_Set__c.object-meta.xml
<CustomObject>
    <description>This object is a link between a product and COGS values.
Each Set has a quarter object connected that defines the validity period.
Next to that the COGS scenario is linked which was used to create the single values.</description>
    <label>COGS Set</label>
    <nameField>
        <label>COGS Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COGS Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>