force-app/main/default/objects/COGS_Set__c/fields/Base_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Base_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Base Quarter</description>
    <inlineHelpText>The Quarter that defines validity of this set</inlineHelpText>
    <label>Base Quarter</label>
    <referenceTo>COGS_Quarter__c</referenceTo>
    <relationshipLabel>COGS Sets</relationshipLabel>
    <relationshipName>COGS_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>