force-app/main/default/objects/COGS_Set__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to product</description>
    <inlineHelpText>Linked Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>COGS Sets</relationshipLabel>
    <relationshipName>COGS_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>