force-app/main/default/objects/COGS_Set__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the scenario from which the connected values are created</description>
    <inlineHelpText>Related Scenario</inlineHelpText>
    <label>COGS Category Scenario</label>
    <referenceTo>COGS_Category_Scenario__c</referenceTo>
    <relationshipLabel>COGS Sets</relationshipLabel>
    <relationshipName>COGS_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>