force-app/main/default/objects/COGS_Set__c/fields/Set_Owner__c.field-meta.xml
<CustomField>
    <fullName>Set_Owner__c</fullName>
    <description>u-blox user who created and own this COGS set</description>
    <inlineHelpText>u-blox user who created and own this COGS set</inlineHelpText>
    <label>Set Owner</label>
    <length>64</length>
    <type>Text</type>
</CustomField>